# ripple

./: .earthlyignore  .gitignore  Cargo.toml  Earthfile  README.md  flake.nix  justfile  rustfmt.toml
.cargo/: config.toml
docs/: archithecture.md  book.toml  surf.md
docs/src/: README.md  SUMMARY.md  define_component.md  element.md  faq.md  features.md  getting_started.md  template.md
natrix/: Cargo.toml
natrix/src/: lib.rs  render_callbacks.rs  signal.rs  state.rs  utils.rs
natrix/tests/: nested_reactivity.rs  simple_reactivty.rs  simple_rendering.rs
natrix_macros/: Cargo.toml
natrix_macros/src/: lib.rs
ripple/: Cargo.toml  build.rs
ripple/src/: callbacks.rs  component.rs  element.rs  html_elements.rs  lib.rs  signal.rs  state.rs  utils.rs
ripple/tests/: common.rs  nested_reactivity.rs  simple_reactivty.rs  simple_rendering.rs
ripple_cli/: Cargo.toml
ripple_macros/: Cargo.toml
ripple_macros/src/: lib.rs
ripple_parser/: Cargo.toml
ripple_parser/benches/: bench.rs
ripple_parser/src/: lib.rs  spann.rs  stream.rs  tokenizer.rs
ripple_parser/src/css/: mod.rs  tokenizer.rs
ripple_runtime/: Cargo.toml
ripple_runtime/src/: lib.rs
ripple_transpiler/: Cargo.toml
ripple_transpiler/src/: lib.rs
surf/: Cargo.toml
surf/benches/: frameworks_diagnostics.rs
surf/src/: css.rs  lib.rs  lsp.rs  main.rs
test_data/: foundation.css  vanilla.css
test_project/: Cargo.toml  Trunk.toml  build.rs  index.html
test_project/src/: lib.rs  main.rs
