[package]
name = "ripple"
version = "0.1.0"
edition = "2024"

[dependencies]
gloo = { version = "0.11.0", default-features = false, features = ["utils"] }
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = ["Comment", "Element", "Event", "Text"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
